--- a/app/src/main/res/layout/weather_item_view.xml
+++ b/app/src/main/res/layout/weather_item_view.xml
@@ -1,95 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:paddingBottom="10dp">
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/data_weather_item_tv"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:text="понедельник 16.09"/>
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/day_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Погода днем: "
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@android:color/black"/>
+            <TextView
+                android:id="@+id/data_weather_item_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:text="понедельник 16.09"/>
 
-        <TextView
-            android:id="@+id/day_temp_weather_item_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="15 C"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="@android:color/black"/>
+            <TextView
+                android:id="@+id/day_weather_item_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ливни"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="20dp"
+                android:textColor="@android:color/black"/>
 
-        <TextView
-            android:id="@+id/day_sost_weather_item_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ливни"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="@android:color/black"/>
+            <TextView
+                android:id="@+id/temp_weather_item_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="15 C"
+                android:textSize="25sp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="20dp"
+                android:textColor="@android:color/black"/>
 
-        <TextView
-            android:id="@+id/night_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Погода ночью: "
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@android:color/black"/>
+            <TextView
+                android:id="@+id/city_weather_item_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Минск, Беларусь"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="20dp"
+                android:textColor="@android:color/black"/>
 
-        <TextView
-            android:id="@+id/night_temp_weather_item_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="15 C"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="@android:color/black"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/night_sost_weather_item_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ливни"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="@android:color/black"/>
+        <LinearLayout
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="end">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/wsymbol_0001_sunny" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
     <View
-        android:background="@android:color/background_dark"
-        android:layout_width="2dp"
-        android:layout_height="match_parent"/>
-
-    <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@mipmap/ic_launcher" />
-
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/darker_gray"/>
 
 </LinearLayout>
