--- a/app/src/main/res/layout/weather_item_view.xml
+++ b/app/src/main/res/layout/weather_item_view.xml
@@ -1,79 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
-    android:paddingBottom="10dp">
+<layout  xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable
+            name="daily"
+            type="com.example.weatherapi.pojo.weather.DailyForecast" />
+    </data>
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/data_weather_item_tv"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:text="понедельник 16.09"/>
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/day_weather_item_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Ливни"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="20dp"
-                android:textColor="@android:color/black"/>
+                <TextView
+                    android:id="@+id/data_weather_item_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
+                    android:text="@{daily.convertData()}"/>
 
-            <TextView
-                android:id="@+id/temp_weather_item_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="15 C"
-                android:textSize="25sp"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="20dp"
-                android:textColor="@android:color/black"/>
+                <TextView
+                    android:id="@+id/day_weather_item_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{daily.day.iconPhrase}"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="@android:color/black"/>
 
-            <TextView
-                android:id="@+id/city_weather_item_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Минск, Беларусь"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="20dp"
-                android:textColor="@android:color/black"/>
+                <TextView
+                    android:id="@+id/temp_weather_item_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text='@{daily.temperature.maximum.convertValue() + "C/" + daily.temperature.minimum.convertValue() + "C"}'
+                    android:textSize="25sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="20dp"
+                    android:textColor="@android:color/black"/>
 
-        </LinearLayout>
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="end">
-
-            <ImageView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/wsymbol_0001_sunny" />
+                android:orientation="vertical"
+                android:gravity="end">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/wsymbol_0001_sunny" />
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/darker_gray"/>
 
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="5dp"
-        android:background="@android:color/darker_gray"/>
-
-</LinearLayout>
+</layout>
